--- a/service/Service/Service.csproj
+++ b/service/Service/Service.csproj
@@ -15,6 +15,10 @@
         <!-- Microsoft.KernelMemory.Core is imported via Microsoft.KernelMemory.Service.AspNetCore. 
              Microsoft.KernelMemory.Core includes also extensions without external dependencies, e.g. all Azure extensions -->
 
+        <PackageReference Include="Correlate.AspNetCore" Version="4.0.0" />
+
+        <PackageReference Include="Destructurama.JsonNet" Version="2.0.0" />
+
         <PackageReference Include="Microsoft.KernelMemory.Service.AspNetCore" Version="0.39.240427.1" Condition="'$(SolutionName)' != 'KernelMemoryDev'" />
         <ProjectReference Include="..\Service.AspNetCore\Service.AspNetCore.csproj" Condition="'$(SolutionName)' == 'KernelMemoryDev'" />
 
@@ -37,6 +41,10 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Serilog" Version="2.12.0" />
+        <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
+        <PackageReference Include="Serilog.Enrichers.CorrelationId" Version="3.0.1" />
+        <PackageReference Include="Serilog.Sinks.Seq" Version="5.2.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
         <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.22.0" />
     </ItemGroup>
